--- a/form.html
+++ b/form.html
@@ -5,30 +5,34 @@
 	<title>Form</title>
 </head>
 <body>
-	<header>
-		<nav class="mobile-menu">
-			<ul>
-				<li class="mobile-menu__item"><a href="#">Карта штата</a></li>
-				<li class="mobile-menu__item"><a href="#">Информация</a></li>
-				<li class="mobile-menu__item"><a href="#">Фото и видео</a></li>
-				<li class="mobile-menu__item"><a href="#">Гостиницы</a></li>
-			</ul>
-			<div class="close-btn"></div>
-		</nav>
-		<div class="top-menu">
-			<div class="logo"></div>
-			<div class="open-btn"></div>
+	<header сlass="page-header">
+		<div class="page-header__menu-wrap">
+			<nav class="main-menu">
+				<ul class="main-menu__list">
+					<li class="main-menu__item"><a class="main-menu__link" href="">Карта штата</a></li>
+					<li class="main-menu__item"><a class="main-menu__link" href="">Информация</a></li>
+					<li class="main-menu__item"><a class="main-menu__link" href="">Фото и видео</a></li>
+					<li class="main-menu__item"><a class="main-menu__link" href="">Гостиницы</a></li>
+				</ul>
+				<a href="" class="main-menu__close"></a>
+			</nav>
+			<div class="page-header__top-panel">
+				<img src="/img/logo.png" alt="" class="page-header__logo">
+				<a href="" class="page-header__burger"></a>
+			</div>
 		</div>
 	</header>
+
 	<section class="intro">
 	</section>
+
 	<section class="intro-text">
 		<h2 class="intro-text__title">Оставьте свой отзыв</h2>
 		<p class="intro-text__text">Помогите нашим отелям стать лучше! Оставьте свой отзыв о них, а также о псященных вами достопримечательностях</p>
 	</section>
 
 
-	<form class="hotel-form" method="post" action="#">
+	<form class="hotel-form" method="post" action="/echo">
 		
 		<div class="name-form">
 			<h1 class="name-form__title">Представьтесь, пожалуйста:</h1>
@@ -67,39 +71,42 @@
 		</div>
 		
 		<div class="trevelers">
-			<div class="counter__panel">
-				<button class="counter__btn">-</button>
-				<div class="counter__display">
-					<div class="counter__left">2</div>
-					<div class="counter__right">чел.</div>
+			<div class="trevelerss__counter-wrap">
+				<div class="counter__panel">
+					<button class="counter__btn">-</button>
+					<div class="counter__display">
+						<div class="counter__left">2</div>
+						<div class="counter__right">чел.</div>
+					</div>
+					<button class="trevelerss__btn">+</button>
 				</div>
-				<button class="date-form__btn">+</button>
 			</div>
-			<div class="treveler">
-				<div class="treveler__col-left">
-					<span class="treveler-num-title">№</span>
-					<div class="treveler-num">1</div>
+			
+			<div class="trevelers__person">
+				<div class="trevelers__col-left">
+					<span class="trevelers-num-title">№</span>
+					<div class="trevelers-num">1</div>
 				</div>
-				<div class="treveler__col-right">
-					<span class="treveler__name traveler__name--req">Фамилия:</span>
+				<div class="trevelers__col-right">
+					<span class="trevelers__name traveler__name--req">Фамилия:</span>
 					<input type="text" class="traveler__inputname" required value="Иванов">
-					<span class="treveler__name traveler__name--req">Имя:</span>
+					<span class="trevelers__name traveler__name--req">Имя:</span>
 					<input type="text" class="traveler__inputname" required value="Пётр">
-					<span class="treveler__name">Отчество:</span>
+					<span class="trevelers__name">Отчество:</span>
 					<input type="text" class="traveler__inputname" value="Александрович">
 				</div>
 			</div>
-			<div class="treveler">
-				<div class="treveler__col-left">
-					<span class="treveler-num-title">№</span>
-					<div class="treveler-num">2</div>
+			<div class="trevelers__person">
+				<div class="trevelers__col-left">
+					<span class="trevelers-num-title">№</span>
+					<div class="trevelers-num">2</div>
 				</div>
-				<div class="treveler__col-right">
-					<span class="treveler__name traveler__name--req">Фамилия:</span>
+				<div class="trevelers__col-right">
+					<span class="trevelers__name traveler__name--req">Фамилия:</span>
 					<input type="text" class="traveler__inputname" required value="Иванов">
-					<span class="treveler__name traveler__name--req">Имя:</span>
+					<span class="trevelers__name traveler__name--req">Имя:</span>
 					<input type="text" class="traveler__inputname" required value="Пётр">
-					<span class="treveler__name">Отчество:</span>
+					<span class="trevelers__name">Отчество:</span>
 					<input type="text" class="traveler__inputname" value="Александрович">
 				</div>
 			</div>	
@@ -136,13 +143,15 @@
 
 	</form>
 
-	<footer class="main-footer">
-		<div class="main-footer__hash">#visitsedona</div>
-		<ul class="main-footer__social">
-			<li><a href="#" class="btn-twitter">Мы в твиттере</a></li>
-			<li><a href="#" class="btn-facebook">Мы в фейсбуке</a></li>
-			<li><a href="#" class="btn-youtube">Мы на ютюбе</a></li>
-		</ul>
+	<footer class="page-footer">
+		<div class="page-footer__hash">#visitsedona</div>
+		<div class="page-footer__social-wrap">
+			<ul class="social">
+				<li class="social__item"><a href="#" class="social__tw">Мы в твиттере</a></li>
+				<li class="social__item"><a href="#" class="social__fb">Мы в фейсбуке</a></li>
+				<li class="social__item"><a href="#" class="social__youtube">Мы на ютюбе</a></li>
+			</ul>
+		</div>
 	</footer>
 </body>
 </html>
