--- a/index.html
+++ b/index.html
@@ -8,57 +8,65 @@
   <body>
 
 	<header сlass="page-header">
-		<div class="page-header__menu-wrap">
-			<nav class="main-menu">
-				<ul class="main-menu__list">
-					<li class="main-menu__item"><a class="main-menu__link" href="">Карта штата</a></li>
-					<li class="main-menu__item"><a class="main-menu__link" href="">Информация</a></li>
-					<li class="main-menu__item"><a class="main-menu__link" href="">Фото и видео</a></li>
-					<li class="main-menu__item"><a class="main-menu__link" href="">Гостиницы</a></li>
+		<div class="page-header__navigation">
+			<nav class="navigation">
+				<ul class="navigation__list">
+					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
+					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
+					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
+					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
 				</ul>
-				<a href="" class="main-menu__close"></a>
+				<a href="" class="navigation__close"></a>
+				<div class="navigation__top-panel">
+					<img src="/img/logo.png" alt="" class="navigation__img-logo">
+					<a href="" class="navigation__burger"></a>
+				</div>
 			</nav>
-			<div class="page-header__top-panel">
-				<img src="/img/logo.png" alt="" class="page-header__logo">
-				<a href="" class="page-header__burger"></a>
-			</div>
 		</div>
 	</header>
 
-	<section class="main-intro">
-		<img src="/img/welcome.png" alt="Welcome" class="main-intro__welcome">
-		<img src="/img/sedona/png" alt="Sedona" class="main-intro__sedona">
-		<img src="/img/text.png" alt="Because the Grand Canyon sucks!" class="main-intro__text">
-	</section>
+	<div class="main-intro">
+		<img src="/img/welcome.png" alt="Welcome" class="main-intro__img-welcome">
+		<img src="/img/sedona/png" alt="Sedona" class="main-intro__img-sedona">
+		<img src="/img/slogan.png" alt="Because the Grand Canyon sucks!" class="main-intro__img-slogan">
+	</div>
 	
-	<section class="intro-text">
-		<h2 class="intro-text__title">Седона - небольшой горрод в Аризоне, заслуживающий большего!</h2>
-		<p class="intro-text__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
-	</section>
+
 
 	<section class="reasons">
-		
-		<div class="reasons__item-light">
-			<h3 class="reasons__title-light">Настоящий городок</h3>
-			<p class="reasons__num-light">- #1 -</p>
-			<p class="reason__about-light">Седона не атракцион для туристов, там течет своя жизнь</p>
+
+		<div class="reasons__header">
+			<h2 class="block__title">Седона - небольшой горрод в Аризоне, заслуживающий большего!</h2>
+			<p class="block__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
+		</div>
+
+		<div class="reasons__item reasons__item--light">
+			<h3 class="reasons__title reasons__title--light">Настоящий городок</h3>
+			<p class="reasons__num reasons__num--light">- #1 -</p>
+			<p class="reason__about reason__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
 		</div>
 		
 		<img src="img/reasons-1.jpg" alt="мотель" class="reasons__image">
 		
 		<div class="features">
-			<h2 class="features__title">Жилье</h2>
-			<p class="features__about">Рекомендуем пожить в настоящем мотеле, все как в кино</p>
-			<h2 class="features__title">Сувениры</h2>
-			<p class="features__about">Не только китайского, но и местного производства</p>
-			<h2 class="features__title">Еда</h2>
-			<p class="features__about">Всегда заказывайте фирменный бургер, вы не разочаруетесть!</p>
+			<div class="features__item">
+				<h2 class="features__title features__title--img-house">Жилье</h2>
+				<p class="features__about">Рекомендуем пожить в настоящем мотеле, все как в кино</p>
+			</div>
+			<div class="features__item">
+				<h2 class="features__title features__title--img-souvenirs">Сувениры</h2>
+				<p class="features__about">Не только китайского, но и местного производства</p>
+			</div>	
+			<div class="features__item">
+				<h2 class="features__title features__title--img-food">Еда</h2>
+				<p class="features__about">Всегда заказывайте фирменный бургер, вы не разочаруетесть!</p>
+			</div>
 		</div>
 
-		<div class="reasons__item-light">
-			<h3 class="reasons__title-light">Там есть мост дьявола</h3>
-			<p  class="reasons__num-light">- №2 -</p>
-			<p  class="reason__about-light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+		<div class="reasons__item reasons__item--light">
+			<h3 class="reasons__title reasons__title--light">Там есть мост дьявола</h3>
+			<p  class="reasons__num reasons__num--light">- №2 -</p>
+			<p  class="reason__about reason__about--light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
 		</div>
 
 		<img src="img/reasons-2.jpg" alt="" class="reasons__image">
@@ -70,7 +78,7 @@
 		</div>
 		
 		<div class="reasons__item">
-			<h2>Красивая дорога</h2>
+			<h2 class="reasons__title">Красивая дорога</h2>
 			<p class="reasons__num">- №4 -</p>
 			<p  class="reason__about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 		</div>
@@ -84,8 +92,8 @@
 	</section>
 	
 	<section class="hotel-search">
-		<h1 class="hotel-search__title">Заинтересовались?</h1>
-		<p class="hotel-search__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
+		<h1 class="block__title">Заинтересовались?</h1>
+		<p class="block__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
 		<a href="#" class="hotel-search__btn">Найти гостиницу</a>
 	</section>
 	
@@ -93,16 +101,14 @@
 	
 	<footer class="page-footer">
 		<div class="page-footer__hash">#visitsedona</div>
-		<div class="page-footer__social-wrap">
-			<ul class="social">
+		<div class="social">
+			<ul class="social_list">
 				<li class="social__item"><a href="#" class="social__tw">Мы в твиттере</a></li>
 				<li class="social__item"><a href="#" class="social__fb">Мы в фейсбуке</a></li>
 				<li class="social__item"><a href="#" class="social__youtube">Мы на ютюбе</a></li>
 			</ul>
 		</div>
-		<div class="page-footer__copyright">
-			<span class="page-footer__text">Разработано<a href="#" class="page-footer__link"></a></span>
-		</div>
+		<div class="page-footer__copyright">Разработано<a href="#" class="page-footer__link">htmlacademy.ru</a></div>
 	</footer>
 	<!-- <script src="js/script.js"></script> -->
   </body>
