--- a/form.html
+++ b/form.html
@@ -37,11 +37,11 @@
 		<div class="name-form">
 			<h1 class="form-page__title">Представьтесь, пожалуйста:</h1>
 			<h2 class="name-form__name name-form__name--req">Фамилия</h2>
-			<input class="name-form__input" type="text" required value="Иванов">
+			<input class="name-form__input" type="text" required placeholder="Иванов">
 			<h2 class="name-form__name name-form__name--req">Имя:</h2>
-			<input class="name-form__input" type="text" required value="Пётр">
+			<input class="name-form__input" type="text" required placeholder="Пётр">
 			<h2 class="name-form__name">Отчество:</h2>
-			<input class="name-form__input" type="text" value="Александрович">
+			<input class="name-form__input" type="text" placeholder="Александрович">
 		</div>
 		
 		<div class="impress-form">
@@ -55,7 +55,7 @@
 		<div class="date-form">
 			<h1 class="form-page__title">Даты вашей поездки</h2>
 			<h2 class="date-form__text">Дата приезда:</h2>
-			<input class="date-form__first-date" type="text" value="4 июля 2015" required>
+			<input class="date-form__first-date" type="text" placeholder="4 июля 2015" required>
 			<h2 class="date-form__text">Длительность пребывания:</h2>
 			<div class="counter__panel">
 				<button class="counter__btn">-</button>
@@ -66,7 +66,7 @@
 				<button class="date-form__btn">+</button>
 			</div>
 			<h2 class="date-form__text">Дата отъезда:</h2>
-			<input class="date-form__last-date" type="text" value="28 июля 2015" required>
+			<input class="date-form__last-date" type="text" placeholder="28 июля 2015" required>
 		</div>
 		
 		<div class="trevelers">
@@ -88,11 +88,11 @@
 				</div>
 				<div class="trevelers__col-right">
 					<label class="trevelers__name traveler__name--req">Фамилия:</label>
-					<input type="text" class="traveler__inputname" required value="Иванов">
+					<input type="text" class="traveler__inputname" required placeholder="Иванов">
 					<label class="trevelers__name traveler__name--req">Имя:</label>
-					<input type="text" class="traveler__inputname" required value="Пётр">
+					<input type="text" class="traveler__inputname" required placeholder="Пётр">
 					<label class="trevelers__name">Отчество:</label>
-					<input type="text" class="traveler__inputname" value="Александрович">
+					<input type="text" class="traveler__inputname" placeholder="Александрович">
 				</div>
 			</div>
 			<div class="trevelers__person">
@@ -102,11 +102,11 @@
 				</div>
 				<div class="trevelers__col-right">
 					<label class="trevelers__name traveler__name--req">Фамилия:</label>
-					<input type="text" class="traveler__inputname" required value="Иванов">
+					<input type="text" class="traveler__inputname" required placeholder="Иванов">
 					<label class="trevelers__name traveler__name--req">Имя:</label>
-					<input type="text" class="traveler__inputname" required value="Пётр">
+					<input type="text" class="traveler__inputname" required placeholder="Пётр">
 					<label class="trevelers__name">Отчество:</label>
-					<input type="text" class="traveler__inputname" value="Александрович">
+					<input type="text" class="traveler__inputname" placeholder="Александрович">
 				</div>
 			</div>	
 		</div>
@@ -138,7 +138,7 @@
 			</div>	
 		</div>
 		
-		<input type="submit" class="hotel-form__btn" value="Отправить отзыв">
+		<input type="submit" class="hotel-form__btn" placeholder="Отправить отзыв">
 
 	</form>
 
