add style from navigation, main-intro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
 	<meta charset="utf-8">
 	<title>HTML Academy: sedona</title>
-	<!-- <link rel="stylesheet" href="css/style.css"> -->
+	<link rel="stylesheet" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
@@ -18,8 +19,8 @@
 				</ul>
 				<a href="" class="navigation__close"></a>
 				<div class="navigation__top-panel">
-					<img src="/img/logo.png" alt="" class="navigation__img-logo">
-					<a href="" class="navigation__burger"></a>
+					<a href="index.html" class="navigation__logo"></a>
+					<a href="" class="navigation__burger"><span></span></a>
 				</div>
 			</nav>
 		</div>
