add normalize, style from reasons__header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<section class="reasons">
 
 		<div class="reasons__header">
-			<h2 class="block__title">Седона - небольшой горрод в Аризоне, заслуживающий большего!</h2>
+			<h2 class="block__title">Седона - небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
 			<p class="block__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
 		</div>
 
@@ -41,9 +41,9 @@
 			<p class="reasons__num reasons__num--light">- #1 -</p>
 			<p class="reason__about reason__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
 		</div>
-		
+
 		<img src="img/reasons-1.jpg" alt="мотель" class="reasons__image">
-		
+
 		<div class="features">
 			<div class="features__item">
 				<h2 class="features__title features__title--img-house">Жилье</h2>
@@ -52,7 +52,7 @@
 			<div class="features__item">
 				<h2 class="features__title features__title--img-souvenirs">Сувениры</h2>
 				<p class="features__about">Не только китайского, но и местного производства</p>
-			</div>	
+			</div>
 			<div class="features__item">
 				<h2 class="features__title features__title--img-food">Еда</h2>
 				<p class="features__about">Всегда заказывайте фирменный бургер, вы не разочаруетесть!</p>
@@ -72,7 +72,7 @@
 			<p class="reasons__num">- №3 -</p>
 			<p class="reason__about">Все достопримечательности находятся очень близко</p>
 		</div>
-		
+
 		<div class="reasons__item">
 			<h2 class="reasons__title">Красивая дорога</h2>
 			<p class="reasons__num">- №4 -</p>
@@ -86,15 +86,15 @@
 		</div>
 
 	</section>
-	
+
 	<section class="hotel-search">
 		<h1 class="block__title">Заинтересовались?</h1>
 		<p class="block__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
 		<a href="#" class="hotel-search__btn">Найти гостиницу</a>
 	</section>
-	
+
 	<section class="map"></section>
-	
+
 	<footer class="page-footer">
 		<div class="page-footer__hash">#visitsedona</div>
 		<div class="social">
