--- a/index.html
+++ b/index.html
@@ -7,105 +7,106 @@
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   </head>
   <body>
+	<div class="container">
+		<header сlass="page-header">
+			<div class="page-header__navigation">
+				<nav class="navigation">
+					<ul class="navigation__list">
+						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
+						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
+						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
+						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
+					</ul>
+					<a href="" class="navigation__close"></a>
+					<div class="navigation__top-panel">
+						<a href="index.html" class="navigation__logo"></a>
+						<a href="" class="navigation__burger"><span></span></a>
+					</div>
+				</nav>
+			</div>
+		</header>
 
-	<header сlass="page-header">
-		<div class="page-header__navigation">
-			<nav class="navigation">
-				<ul class="navigation__list">
-					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
-					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
-					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
-					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
-				</ul>
-				<a href="" class="navigation__close"></a>
-				<div class="navigation__top-panel">
-					<a href="index.html" class="navigation__logo"></a>
-					<a href="" class="navigation__burger"><span></span></a>
+		<div class="main-intro">
+		</div>
+
+		<section class="reasons">
+
+			<div class="reasons__header">
+				<h2 class="block__title">Седона - небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
+				<p class="block__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
+			</div>
+
+			<div class="reasons__item reasons__item--light reasons__item--mask">
+				<h3 class="reasons__title reasons__title--light">Настоящий городок</h3>
+				<p class="reasons__num reasons__num--light">- #1 -</p>
+				<p class="reasons__about reasons__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
+			</div>
+
+			<img src="img/motel.jpg" alt="" class="reasons__image" width="100%" height="auto">
+
+			<div class="features">
+				<div class="features__item">
+					<h2 class="features__title features__title--img-house">Жилье</h2>
+					<p class="features__about">Рекомендуем пожить в настоящем мотеле, все как в кино</p>
 				</div>
-			</nav>
-		</div>
-	</header>
-
-	<div class="main-intro">
-	</div>
-
-	<section class="reasons">
-
-		<div class="reasons__header">
-			<h2 class="block__title">Седона - небольшой <br>городок в Аризоне, <br>заслуживающий большего!</h2>
-			<p class="block__text">Рассмотрим 5 причин по которым Седона круче чем Гранд Каньон!</p>
-		</div>
-
-		<div class="reasons__item reasons__item--light">
-			<h3 class="reasons__title reasons__title--light">Настоящий городок</h3>
-			<p class="reasons__num reasons__num--light">- #1 -</p>
-			<p class="reason__about reason__about--light">Седона не атракцион для туристов, там течет своя жизнь</p>
-		</div>
-
-		<img src="img/reasons-1.jpg" alt="мотель" class="reasons__image">
-
-		<div class="features">
-			<div class="features__item">
-				<h2 class="features__title features__title--img-house">Жилье</h2>
-				<p class="features__about">Рекомендуем пожить в настоящем мотеле, все как в кино</p>
+				<div class="features__item">
+					<h2 class="features__title features__title--img-souvenirs">Сувениры</h2>
+					<p class="features__about">Не только китайского, но и местного производства</p>
+				</div>
+				<div class="features__item">
+					<h2 class="features__title features__title--img-food">Еда</h2>
+					<p class="features__about">Всегда заказывайте фирменный бургер, вы не разочаруетесть!</p>
+				</div>
 			</div>
-			<div class="features__item">
-				<h2 class="features__title features__title--img-souvenirs">Сувениры</h2>
-				<p class="features__about">Не только китайского, но и местного производства</p>
+
+			<div class="reasons__item reasons__item--light">
+				<h3 class="reasons__title reasons__title--light">Там есть мост дьявола</h3>
+				<p  class="reasons__num reasons__num--light">- №2 -</p>
+				<p  class="reasons__about reasons__about--light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
 			</div>
-			<div class="features__item">
-				<h2 class="features__title features__title--img-food">Еда</h2>
-				<p class="features__about">Всегда заказывайте фирменный бургер, вы не разочаруетесть!</p>
+
+			<img src="img/bridge.jpg" alt="мост" class="reasons__image" width="100%" height="auto">
+
+			<div class="reasons__item">
+				<h2 class="reasons__title">Небольшая площадь</h2>
+				<p class="reasons__num">- №3 -</p>
+				<p class="reasons__about">Все достопримечательности находятся очень близко</p>
 			</div>
-		</div>
 
-		<div class="reasons__item reasons__item--light">
-			<h3 class="reasons__title reasons__title--light">Там есть мост дьявола</h3>
-			<p  class="reasons__num reasons__num--light">- №2 -</p>
-			<p  class="reason__about reason__about--light">Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
-		</div>
+			<div class="reasons__item">
+				<h2 class="reasons__title">Красивая дорога</h2>
+				<p class="reasons__num">- №4 -</p>
+				<p  class="reasons__about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+			</div>
 
-		<img src="img/reasons-2.jpg" alt="" class="reasons__image">
+			<div class="reasons__item">
+				<h2 class="reasons__title">Мало туристов</h2>
+				<p class="reasons__num">- №5 -</p>
+				<p class="reasons__about">Большинство туристов едет в Гранд Каньон и толпится там</p>
+			</div>
 
-		<div class="reasons__item">
-			<h2 class="features__title">Небольшая площадь</h2>
-			<p class="reasons__num">- №3 -</p>
-			<p class="reason__about">Все достопримечательности находятся очень близко</p>
-		</div>
+		</section>
 
-		<div class="reasons__item">
-			<h2 class="reasons__title">Красивая дорога</h2>
-			<p class="reasons__num">- №4 -</p>
-			<p  class="reason__about">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-		</div>
+		<section class="hotel-search">
+			<h1 class="block__title">Заинтересовались?</h1>
+			<p class="block__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
+			<a href="#" class="hotel-search__btn">Найти гостиницу</a>
+		</section>
 
-		<div class="reasons__item">
-			<h2 class="features__title">Мало туристов</h2>
-			<p class="reasons__num">- №5 -</p>
-			<p class="reason__about">Большинство туристов едет в Гранд Каньон и толпится там</p>
-		</div>
+		<section class="map"></section>
 
-	</section>
-
-	<section class="hotel-search">
-		<h1 class="block__title">Заинтересовались?</h1>
-		<p class="block__text">Укажите предполагаемые даты поездки и покажем вам лучшие предложения гостиниц в седоне</p>
-		<a href="#" class="hotel-search__btn">Найти гостиницу</a>
-	</section>
-
-	<section class="map"></section>
-
-	<footer class="page-footer">
-		<div class="page-footer__hash">#visitsedona</div>
-		<div class="social">
-			<ul class="social_list">
-				<li class="social__item"><a href="#" class="social__tw">Мы в твиттере</a></li>
-				<li class="social__item"><a href="#" class="social__fb">Мы в фейсбуке</a></li>
-				<li class="social__item"><a href="#" class="social__youtube">Мы на ютюбе</a></li>
-			</ul>
-		</div>
-		<div class="page-footer__copyright">Разработано<a href="#" class="page-footer__link">htmlacademy.ru</a></div>
-	</footer>
+		<footer class="page-footer">
+			<div class="page-footer__hash">#visitsedona</div>
+			<div class="social">
+				<ul class="social__list">
+					<li class="social__item"><a href="#" class="icon-twitter social__link"><span>Мы в твиттере</span></a></li>
+					<li class="social__item"><a href="#" class="icon-facebook social__link"><span>Мы в фейсбуке</span></a></li>
+					<li class="social__item"><a href="#" class="icon-youtube social__link"><span>Мы на ютюбе</span></a></li>
+				</ul>
+			</div>
+			<div class="page-footer__copyright">Разработано<a href="#" class="page-footer__link">htmlacademy.ru</a></div>
+		</footer>
+	</div>	
 	<!-- <script src="js/script.js"></script> -->
   </body>
 </html>
