add style, file-tree

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<li class="social__item"><a href="#" class="icon-youtube social__link"><span>Мы на ютюбе</span></a></li>
 				</ul>
 			</div>
-			<div class="page-footer__copyright">Разработано<a href="#" class="page-footer__link">htmlacademy.ru</a></div>
+			<div class="page-footer__copyright">Разработано<a href="http://htmlacademy.ru" class="page-footer__link"></a></div>
 		</footer>
 	</div>	
 	<!-- <script src="js/script.js"></script> -->
