--- a/form.html
+++ b/form.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<link rel="stylesheet" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
 	<title>Form</title>
 </head>
 <body>
-	<header сlass="page-header">
-		<div class="page-header__navigation">
-			<nav class="navigation">
-				<ul class="navigation__list">
-					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
-					<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
-					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
-					<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
-				</ul>
-				<a href="" class="navigation__close"></a>
-				<div class="navigation__top-panel">
-					<img src="/img/logo.png" alt="" class="navigation__img-logo">
-					<a href="" class="navigation__burger"></a>
-				</div>
-			</nav>
-		</div>
-	</header>
+		<header сlass="page-header">
+			<div class="page-header__navigation">
+				<nav class="navigation">
+					<ul class="navigation__list">
+						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Карта штата</a></li>
+						<li class="navigation__item navigation__item--left"><a class="navigation__link" href="">Информация</a></li>
+						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Фото и видео</a></li>
+						<li class="navigation__item navigation__item--right"><a class="navigation__link" href="">Гостиницы</a></li>
+					</ul>
+					<a href="" class="navigation__close"></a>
+					<div class="navigation__top-panel">
+						<a href="index.html" class="navigation__logo"></a>
+						<a href="" class="navigation__burger"><span></span></a>
+					</div>
+				</nav>
+			</div>
+		</header>
 
 	<section class="intro">
 	</section>
@@ -142,15 +144,15 @@
 
 	</form>
 
-	<footer class="page-footer">
-		<div class="page-footer__hash">#visitsedona</div>
-		<div class="social">
-			<ul class="social_list">
-				<li class="social__item"><a href="#" class="social__tw">Мы в твиттере</a></li>
-				<li class="social__item"><a href="#" class="social__fb">Мы в фейсбуке</a></li>
-				<li class="social__item"><a href="#" class="social__youtube">Мы на ютюбе</a></li>
-			</ul>
-		</div>
-	</footer>
+		<footer class="page-footer">
+			<div class="page-footer__hash">#visitsedona</div>
+			<div class="social">
+				<ul class="social__list">
+					<li class="social__item"><a href="#" class="icon-twitter social__link"><span>Мы в твиттере</span></a></li>
+					<li class="social__item"><a href="#" class="icon-facebook social__link"><span>Мы в фейсбуке</span></a></li>
+					<li class="social__item"><a href="#" class="icon-youtube social__link"><span>Мы на ютюбе</span></a></li>
+				</ul>
+			</div>
+		</footer>
 </body>
 </html>
