--- a/form.html
+++ b/form.html
@@ -31,7 +31,10 @@
 
 		<section class="intro-text">
 			<h2 class="intro-text__title">Оставьте свой отзыв</h2>
-			<p class="intro-text__text">Помогите нашим отелям стать лучше! Оставьте свой отзыв о них, а также о псященных вами достопримечательностях</p>
+			<p class="intro-text__text">Помогите нашим отелям стать лучше!<br>
+			Оставьте свой отзыв о них, а также о<br>
+			посященных вами<br>
+			достопримечательностях</p>
 		</section>
 
 
