fix btn counter

--- a/form.html
+++ b/form.html
@@ -64,12 +64,12 @@
 				<input class="hotel-form__input" type="text" placeholder="4 июля 2015" required>
 				<label class="hotel-form__label">Длительность пребывания:</label>
 				<div class="counter">
-					<button class="counter__btn icon-minus"></button>
+					<a href="" class="counter__btn icon-minus"></a>
 						<div class="counter__display">
 							<input type="text" class="counter__input" value="14">
 							<div class="counter__right">дн.</div>
 						</div>
-					<button class="counter__btn icon-plus"></button>
+					<a href="" class="counter__btn icon-plus"></a>
 				</div>
 				<label class="hotel-form__label">Дата отъезда:</label>
 				<input class="hotel-form__input" type="text" placeholder="28 июля 2015" required>
@@ -80,12 +80,12 @@
 				<label for="" class="hotel-form__label hotel-form__label--req">Количество путешественников:</label>
 				<div class="travelerss__counter-wrap">
 					<div class="counter">
-						<button class="counter__btn icon-minus"></button>
+						<a href="" class="counter__btn icon-minus"></a>
 						<div class="counter__display">
 							<input type="text" class="counter__input" value="2">
 							<div class="counter__right">чел.</div>
 						</div>
-						<button class="counter__btn icon-plus"></button>
+						<a href="" class="counter__btn icon-plus"></a>
 					</div>
 				</div>
 				
